With CLient Api