@@ -1,109 +1,107 @@
 package com.example.javagame;
 
-import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-
+import java.io.*;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 
 public class ApiClient {
-    private static final String BASE_URL = "http://localhost:8080/javagame-1.0-SNAPSHOT/";
-    private final HttpClient httpClient;
+    private final String BASE_URL;
 
-
-    public ApiClient() {
-        this.httpClient = HttpClient.newHttpClient();
-    }
-    //POST /connect
-    public String connect(String playerName) throws IOException, InterruptedException {
-        // Créer le corps JSON pour la requête POST
-        String requestBody = "{\"playerName\":\"" + playerName + "\"}";
-
-        // Créer la requête HTTP avec la méthode POST
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/connect"))  // URL de la requête
-                .header("Content-Type", "application/json")  // Définir le type de contenu
-                .POST(HttpRequest.BodyPublishers.ofString(requestBody))  // Corps de la requête
-                .build();
-
-        // Envoyer la requête et obtenir la réponse
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-
-        // Retourner le corps de la réponse (réponse du serveur)
-        return response.body();
-    }
-    //GET /game-state
-    public String getGameState() throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/game-state"))
-                .GET()
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        return response.body(); // Retourne l'état du jeu (JSON)
+    public ApiClient(String baseUrl) {
+        this.BASE_URL = baseUrl;
     }
 
-    //post /Move
-    public String move(String playerId, String newPosition) throws IOException, InterruptedException {
-        String requestBody = "{\"playerId\":\"" + playerId + "\", \"newPosition\":\"" + newPosition + "\"}";
+    // Méthode utilitaire pour effectuer un POST JSON
+    private String doPost(String endpoint, String jsonBody) throws IOException {
+        URL url = new URL(BASE_URL + endpoint);
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        conn.setRequestMethod("POST");
+        conn.setRequestProperty("Content-Type", "application/json");
+        conn.setDoOutput(true);
 
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/move"))
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(requestBody))
-                .build();
+        try (OutputStream os = conn.getOutputStream()) {
+            byte[] input = jsonBody.getBytes(StandardCharsets.UTF_8);
+            os.write(input, 0, input.length);
+        }
 
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        return response.body(); // Retourne la réponse avec la nouvelle position ou une erreur
+        // Lecture de la réponse
+        StringBuilder response = new StringBuilder();
+        try (BufferedReader br =
+                     new BufferedReader(new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
+            String responseLine;
+            while ((responseLine = br.readLine()) != null) {
+                response.append(responseLine);
+            }
+        }
+        conn.disconnect();
+        return response.toString();
     }
-    // POST /attack
-    public String attack(String playerId, String targetId) throws IOException, InterruptedException {
-        String requestBody = "{\"playerId\":\"" + playerId + "\", \"targetId\":\"" + targetId + "\"}";
 
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/attack"))
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(requestBody))
-                .build();
+    // Méthode utilitaire pour effectuer un GET
+    private String doGet(String endpoint) throws IOException {
+        URL url = new URL(BASE_URL + endpoint);
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        conn.setRequestMethod("GET");
 
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        return response.body(); // Retourne les détails de l'attaque, XP gagné, et HP restant du target
+        StringBuilder response = new StringBuilder();
+        try (BufferedReader br =
+                     new BufferedReader(new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
+            String line;
+            while ((line = br.readLine()) != null) {
+                response.append(line);
+            }
+        }
+        conn.disconnect();
+        return response.toString();
     }
-    // GET /players
-    public String getPlayers() throws IOException, InterruptedException {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/players"))
-                .GET()
-                .build();
 
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        return response.body(); // Retourne la liste des joueurs
+    // 1) CONNECT
+    public String connect(String playerName) throws IOException {
+        String body = "{\"playerName\":\"" + playerName + "\"}";
+        return doPost("/connect", body);
     }
-    // POST /chat
-    public String sendChatMessage(String playerId, String message) throws IOException, InterruptedException {
-        String requestBody = "{\"playerId\":\"" + playerId + "\", \"message\":\"" + message + "\"}";
 
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/chat"))
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(requestBody))
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        return response.body(); // Retourne la réponse du serveur (par exemple, le message envoyé)
+    // 2) GET GAME-STATE
+    public String getGameState() throws IOException {
+        return doGet("/game-state");
     }
-    // POST /end-turn
-    public String endTurn(String playerId) throws IOException, InterruptedException {
-        String requestBody = "{\"playerId\":\"" + playerId + "\"}";
 
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(BASE_URL + "/end-turn"))
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(requestBody))
-                .build();
+    // 3) MOVE
+    public String move(int playerId, int[] newPosition) throws IOException {
+        // Exemple: {"playerId":123,"newPosition":[2,3]}
+        String body = "{\"playerId\":" + playerId +
+                ",\"newPosition\":" + Arrays.toString(newPosition) + "}";
+        System.out.println("body: " + body);
+        return doPost("/move", body);
+    }
 
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        return response.body(); // Retourne la réponse avec le joueur suivant (nextPlayer)
+    // 4) ATTACK
+    public String attack(int playerId, int targetId) throws IOException {
+        // Exemple: {"playerId":123,"targetId":456}
+        String body = "{\"playerId\":" + playerId +
+                ",\"targetId\":" + targetId + "}";
+        return doPost("/attack", body);
+    }
+
+    // 5) END-TURN
+    public String endTurn(int playerId) throws IOException {
+        // Exemple: {"playerId":123}
+        String body = "{\"playerId\":" + playerId + "}";
+        return doPost("/end-turn", body);
+    }
+
+    // 6) GET PLAYERS
+    public String getPlayers() throws IOException {
+        return doGet("/players");
+    }
+
+    // 7) CHAT
+    public String chat(int playerId, String message) throws IOException {
+        // Exemple: {"playerId":123,"message":"Hello"}
+        String body = "{\"playerId\":" + playerId +
+                ",\"message\":\"" + message + "\"}";
+        return doPost("/chat", body);
     }
 }
